vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.out
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:56:13: error: cannot use `Maybe[string]` as `Maybe[int]` in argument 1 to `Maybe[int].or`
   54 |     b := some('abc')
   55 | 
   56 |     c := a.@or(b)
      |                ^
   57 |     println(c)
   58 | }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:27:3: error: `Maybe[string]` has no variant `int`.
2 possibilities: `None`, `string`.
   25 |     return match m {
   26 |         None { false }
   27 |         T { true }
      |         ^
   28 |     }
   29 | }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:25:9: error: match must be exhaustive (add match branches for: `string` or `else {}` at the end)
   23 | 
   24 | pub fn (m Maybe[T]) is_some[T]() bool {
   25 |     return match m {
      |            ~~~~~~~~~
   26 |         None { false }
   27 |         T { true }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:34:3: error: `Maybe[string]` has no variant `int`.
2 possibilities: `None`, `string`.
   32 |     return match m {
   33 |         None { true }
   34 |         T { false }
      |         ^
   35 |     }
   36 | }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:32:9: error: match must be exhaustive (add match branches for: `string` or `else {}` at the end)
   30 | 
   31 | pub fn (m Maybe[T]) is_noth[T]() bool {
   32 |     return match m {
      |            ~~~~~~~~~
   33 |         None { true }
   34 |         T { false }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:46:3: error: `Maybe[string]` has no variant `int`.
2 possibilities: `None`, `string`.
   44 |             }
   45 |         }
   46 |         T {
      |         ^
   47 |             m
   48 |         }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:39:9: error: match must be exhaustive (add match branches for: `string` or `else {}` at the end)
   37 | 
   38 | pub fn (m Maybe[T]) @or[T](m2 Maybe[T]) Maybe[T] {
   39 |     return match m {
      |            ~~~~~~~~~
   40 |         None {
   41 |             match m2 {
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:43:5: error: `Maybe[string]` has no variant `int`.
2 possibilities: `None`, `string`.
   41 |             match m2 {
   42 |                 None { None{} }
   43 |                 T { m2 }
      |                 ^
   44 |             }
   45 |         }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:41:4: error: match must be exhaustive (add match branches for: `string` or `else {}` at the end)
   39 |     return match m {
   40 |         None {
   41 |             match m2 {
      |             ~~~~~~~~~~
   42 |                 None { None{} }
   43 |                 T { m2 }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:43:9: error: return type mismatch, it should be `Maybe[string]`, but it is instead `int`
   41 |             match m2 {
   42 |                 None { None{} }
   43 |                 T { m2 }
      |                     ~~
   44 |             }
   45 |         }
vlib/v/checker/tests/generics_method_sumtype_arg_mismatch.vv:47:4: error: return type mismatch, it should be `Maybe[string]`, but it is instead `int`
   45 |         }
   46 |         T {
   47 |             m
      |             ^
   48 |         }
   49 |     }
